--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<p id="label"></p>
-<button onclick="buttonClick()">Button</button>
-
-<script type="text/javascript" src="script.js"></script>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Is Joe at Work?</title>
+		<script type="text/javascript" src="script.js" defer></script>
+		<link rel="stylesheet" href="main.css">
+	</head>
+	<body>
+		<p id="work-status"/>
+		<p id="timestamp"/>
+	</body>
+</html>
