fix joe's schedule

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
-		<p id="work-status"/>
-		<p id="timestamp"/>
-        <p id="label1"/>
+		<div class="main">
+			<p id="work-status"/>
+			<p id="timestamp"/>
+	        <p id="label1"/>
+	    </p>
 	</body>
 </html>
